--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 *.html linguist-language=Ignore
 *.css linguist-language=Ignore
-client/src/components/ui/*.vue linguist-vendored
+client/src/components/ui/**/*.vue linguist-vendored
